--- a/src/www/candid.html
+++ b/src/www/candid.html
@@ -2,7 +2,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>DFINITY Canister Candid UI</title>
+  <title>Ethical Targeting Ad Manager</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-reboot@4.5.4/reboot.css" />
   <link rel="preconnect" href="https://fonts.gstatic.com" />
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&display=swap" rel="stylesheet" />
@@ -17,15 +17,14 @@
 
 <body>
   <div id="progress">
-    <progress class="ic_progress" id="ic-progress">Loading Candid UI...</progress>
+    <progress class="ic_progress" id="ic-progress">Loading ad manager...</progress>
   </div>
   <app id="app" style="display: none">
-    <div id="header">Canister ID:&nbsp;<span id="canisterId"></span></div>
     <div id="container">
       <div id="main-content">
         <div id="title-card">
-          <h1 id="title">Candid UI</h1>
-          Browse and test your API with our visual web interface.
+          <h1 id="title">Ethical Targeting Ad Manager</h1>
+          Debug console
         </div>
         <ul id="methods"></ul>
       </div>
